--- a/src/components/elements/header/Header.module.css
+++ b/src/components/elements/header/Header.module.css
@@ -8,8 +8,6 @@
 }
 .logoHeaderContainer {
   display: flex;
-  width: 25%;
-  justify-content: space-between;
 }
 .logo {
   height: 80px;
@@ -18,6 +16,7 @@
 .platformName {
   font-family: "Manrope";
   font-size: 28px;
+  padding-left: 20px;
 }
 .navigationContainer {
   display: flex;
@@ -27,4 +26,62 @@
 .navigationContent {
   font-family: "Manrope";
   cursor: pointer;
+}
+.overlay {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-y: hidden;
+  transition: 0.5s;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(180deg, rgb(0 0 0 / 96%) 0%, rgba(0, 0, 0, 0.0001) 100%);
+}
+.overlayContent {
+  margin: 32px 25px 0px 25px;
+}
+.overlayContent a {
+  width: 100%;
+  margin: 0 auto;
+}
+.overlayContent a {
+  border-bottom: 1px solid white;
+}
+.overlay a {
+  font-family: "Manrope";
+  font-size: 18px;
+  color: white;
+  padding: 24px 0px;
+  text-decoration: none;
+  display: block;
+  transition: 0.3s;
+}
+.closebtn {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 56px;
+}
+.closebtn img {
+  padding-right: 25px;
+}
+
+.hamburgerIcon {
+  cursor: pointer;
+  display: none;
+  padding-right: 25px;
+}
+.closeIcon {
+  cursor: pointer;
+}
+@media only screen and (max-width: 820px) {
+  .hamburgerIcon {
+    display: block;
+  }
+  .navigationContainer {
+    display: none;
+  }
 }
