--- a/src/components/auth/register/Register.module.css
+++ b/src/components/auth/register/Register.module.css
@@ -1,3 +1,37 @@
-.btn{
-    background-color: green;
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100vh;
+    background-color:green;
+}
+
+.container{
+    margin-top:50px;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+    padding:10px;
+    width: calc(100% - 40px);
+    max-width: 600px;
+    background-color:red;
+}
+
+.form{
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.form input{
+    width:100%;
+}
+
+.row{
+    display:flex;
+    gap:10px;
+    width:100%;
 }
