--- a/src/components/elements/Input/Input.module.css
+++ b/src/components/elements/Input/Input.module.css
@@ -1,10 +1,10 @@
 .input{
     width: 215px;
     height: 30px;
-    font-family: "Manrope" ;
     border: 1px solid lightgrey;
     border-radius: 5px;
-    padding-left: 30px;
+    outline:none;
+    text-indent: 15px;
 }
 .input:hover{
   cursor: pointer;
