--- a/src/components/elements/navigation/subHeader/SubHeader.module.css
+++ b/src/components/elements/navigation/subHeader/SubHeader.module.css
@@ -23,3 +23,15 @@
     padding-left: 90px;
     padding-right: 20px;
   }
+  
+@media only screen and (max-width: 820px) {
+    .container{
+        padding-right: 40px;
+    }
+}
+@media only screen and (max-width: 630px) {
+    .container{
+        height: 130px;
+        display: grid;
+    }
+}
