--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -38,16 +38,21 @@
 }
 .PMInfoContainer {
   display: flex;
+  align-items: center;
 }
 .PMAvatar {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
   border: 1px solid black;
   margin-right: 5px;
 }
 .PMName {
   font-size: 16px;
+}
+.PMNameAdditional {
+  font-size: 16px;
+  font-weight: bold;
 }
 .cardHeader {
   font-size: 20px;
@@ -60,6 +65,27 @@
 }
 .EmployeeInfo {
   padding-top: 22px;
+}
+.cardContainerSecond {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  background-color: #f6f8ff;
+  padding: 15px;
+  max-width: 33vw;
+  align-items: center;
+  justify-content: space-between;
+}
+.iconPmInfoContainer {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  padding-top: 15px;
+}
+.noteIcon {
+  width: 20px;
+  height: 20px;
 }
 @media only screen and (max-width: 1080px) {
   .cardContainer {
@@ -92,8 +118,27 @@
   .PMName {
     font-size: 12px;
   }
+  .PMNameAdditional {
+    font-size: 12px;
+  }
+
   .EmployeeInfo {
     font-size: 12px;
+  }
+}
+@media only screen and (max-width: 620px) {
+  .iconPmInfoContainer {
+    display: flex;
+    flex-direction: column;
+  }
+  .noteIcon {
+    order: 2;
+    padding-top: 10px;
+    width: 28px;
+    height: 28px;
+  }
+  .PMAvatar {
+    display: none;
   }
 }
 @media only screen and (max-width: 500px) {
