--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -112,8 +112,7 @@
     font-size: 14px;
   }
   .PMAvatar {
-    width: 15px;
-    height: 15px;
+    display: none;
   }
   .PMName {
     font-size: 12px;
