Added more stuff

--- a/src/components/elements/button/Button.module.css
+++ b/src/components/elements/button/Button.module.css
@@ -1,15 +1,13 @@
-.btn{
+.btn {
     width: 100px;
     height: 30px;
     background-color: #4987f2;
-    border: 1 px solid transparent;
+    border: none;
+    outline: none;
     border-radius: 5px;
     color: #fff;
 }
-.btn:hover{
+.btn:hover {
     cursor: pointer;
     filter: brightness(120%);
-    transform: translateY(-2px);
-}.btn:active{
-    transform: translateY(0);
 }
