--- a/src/components/elements/navigation/header/Header.module.css
+++ b/src/components/elements/navigation/header/Header.module.css
@@ -1,85 +1,88 @@
 .header {
-  background-color: #f6f8ff;
-  box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px 0px;
+    background-color: #f6f8ff;
+    box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 0px;
 }
 .logoHeaderContainer {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 .logo {
-  height: 80px;
-  padding-left: 50px;
+    height: 80px;
+    padding-left: 50px;
 }
 .platformName {
-  font-size: 28px;
-  padding-left: 20px;
+    font-size: 28px;
+    padding-left: 20px;
 }
 .navigationContainer {
-  display: flex;
-  width: 40%;
-  justify-content: space-evenly;
+    display: flex;
+    width: 40%;
+    justify-content: space-evenly;
 }
 .navigationContent {
-  cursor: pointer;
+    cursor: pointer;
 }
 .overlay {
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  overflow-y: hidden;
-  transition: 0.5s;
-  display: flex;
-  flex-direction: column;
-  background: linear-gradient(180deg, rgb(0 0 0 / 96%) 0%, rgba(0, 0, 0, 0.0001) 100%);
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(
+        180deg,
+        rgb(0 0 0 / 96%) 0%,
+        rgba(0, 0, 0, 0.0001) 100%
+    );
 }
 .overlayContent {
-  margin: 32px 25px 0px 25px;
+    margin: 32px 25px 0px 25px;
 }
 .overlayContent a {
-  width: 100%;
-  margin: 0 auto;
+    width: 100%;
+    margin: 0 auto;
 }
 .overlayContent a {
-  border-bottom: 1px solid white;
+    border-bottom: 1px solid white;
 }
 .overlay a {
-  font-size: 18px;
-  color: white;
-  padding: 24px 0px;
-  text-decoration: none;
-  display: block;
-  transition: 0.3s;
+    font-size: 18px;
+    color: white;
+    padding: 24px 0px;
+    text-decoration: none;
+    display: block;
+    transition: 0.3s;
 }
 .closebtn {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  padding-top: 56px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 56px;
 }
 .closebtn img {
-  padding-right: 25px;
+    padding-right: 25px;
 }
 
 .hamburgerIcon {
-  cursor: pointer;
-  display: none;
-  padding-right: 25px;
+    cursor: pointer;
+    display: none;
+    padding-right: 25px;
 }
 .closeIcon {
-  cursor: pointer;
+    cursor: pointer;
 }
 @media only screen and (max-width: 820px) {
-  .hamburgerIcon {
-    display: block;
-  }
-  .navigationContainer {
-    display: none;
-  }
+    .hamburgerIcon {
+        display: block;
+    }
+    .navigationContainer {
+        display: none;
+    }
 }
