--- a/src/components/elements/navigation/adminHeader/AdminHeader.module.css
+++ b/src/components/elements/navigation/adminHeader/AdminHeader.module.css
@@ -3,11 +3,17 @@
 }
 .container{
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content:space-between;
+    margin-bottom:10px;
+}
+
+.container input{
+    height: 45px;
 }
 
 .right_column{
     display: flex;
     align-items: center;
+    width: 100%;
 }
