responsive for employee subheader

--- a/src/components/elements/navigation/subHeaderEmployee/SubHeaderEmployee.module.css
+++ b/src/components/elements/navigation/subHeaderEmployee/SubHeaderEmployee.module.css
@@ -1,7 +1,7 @@
 .container {
   background-color: rgb(211, 211, 211, 0.3);
   display: grid;
-  grid-template-columns: repeat(2, 50%);
+  grid-template-columns: 60% 40%;
   justify-content: center;
   align-items: center;
   padding: 15px 0px;
@@ -17,6 +17,8 @@
 .paragraph {
   opacity: 50%;
   font-size: 14px;
+  inline-size: 400px;
+  overflow-wrap: break-word;
 }
 .logo {
   height: 60px;
@@ -49,3 +51,35 @@
 .profile_pictures {
   margin-left: -10px;
 }
+@media only screen and (max-width: 980px) {
+    .container {
+        display: grid;
+        grid-template-columns: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    .info {
+       margin-top: 40px;
+       margin-right: 125px;
+      }
+  }
+  @media only screen and (max-width: 740px) {
+    .info {
+        margin-right: 0;
+    }
+  }
+  @media only screen and (max-width: 640px) {
+    .logo {
+        padding-left: 0px;  
+      }
+  }
+  @media only screen and (max-width: 500px) {
+   .container{
+       display: inline-block;
+       margin-left: -20px;
+   }
+   .paragraph {
+    font-size: 12px;
+    inline-size: 200px;
+  }
+  }
