--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -7,12 +7,13 @@
 .cardContainer {
   display: flex;
   border-radius: 10px;
-  background-color: #f6f8ff;
+  background-color: #ffffff;
   padding: 15px;
   width: 33vw;
   align-items: center;
   justify-content: space-between;
   margin: 10px;
+  box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
 }
 .avatarPMContainer {
   display: flex;
@@ -73,12 +74,13 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  background-color: #f6f8ff;
+  background-color: #ffffff;
   padding: 15px;
   max-width: 33vw;
   align-items: center;
   justify-content: space-between;
   margin: 5px;
+  box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
 }
 .iconPmInfoContainer {
   display: flex;
