--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -76,7 +76,7 @@
   border-radius: 10px;
   background-color: #ffffff;
   padding: 15px;
-  max-width: 33vw;
+  width: 33vw;
   align-items: center;
   justify-content: space-between;
   margin: 5px;
@@ -144,6 +144,11 @@
   }
   .PMAvatar {
     display: none;
+  }
+}
+@media only screen and (max-width: 580px) {
+  .cardContainerSecond {
+    width: 100%;
   }
 }
 @media only screen and (max-width: 500px) {
