--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -6,37 +6,47 @@
 
 .cardContainer {
   display: flex;
+  justify-content:flex-start;
   border-radius: 10px;
   background-color: #ffffff;
   padding: 15px;
-  width: 33vw;
+  height:130px;
   align-items: center;
-  justify-content: space-between;
+  border: black solid 1px;
   margin: 10px;
   box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
+}
+.info_container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .avatarPMContainer {
   display: flex;
   align-items: center;
 }
 .cardAvatar {
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
+  border-radius: 100%;
+  width: 70px;
+  height: 70px;
   border: 1px solid black;
   display: flex;
   background-color: white;
   margin-right: 10px;
 }
 .avatar {
-  max-width: 100%;
-  max-height: 100%;
+  width: 70px;
+  height: 70px;
   object-fit: contain;
-  border-radius: 50%;
+  border-radius: 100%;
 }
 .headerPMInfoContainer {
   display: flex;
-  flex-direction: column;
+  width:100%;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 .PMInfoContainer {
   display: flex;
@@ -59,12 +69,11 @@
 }
 .cardHeader {
   font-size: 20px;
-  padding-bottom: 10px;
 }
 .btnEmployeeInfoContainer {
   display: flex;
-  flex-direction: column;
   align-items: flex-end;
+  justify-content: space-between;
 }
 .EmployeeInfo {
   padding-top: 22px;
@@ -94,10 +103,6 @@
   height: 20px;
 }
 @media only screen and (max-width: 1080px) {
-  .cardContainer {
-    display: flex;
-    flex-direction: column;
-  }
   .btnEmployeeInfoContainer {
     display: flex;
     flex-direction: row;
@@ -106,7 +111,6 @@
     width: 100%;
   }
   .avatarPMContainer {
-    width: 100%;
   }
 }
 @media only screen and (max-width: 780px) {
