--- a/src/components/elements/tabs/Tabs.module.css
+++ b/src/components/elements/tabs/Tabs.module.css
@@ -1,12 +1,10 @@
 .tabs {
-  width: 80%;
-  height: auto;
+  width: 100%;
   min-height: 400px;
   background: #f6f8ff;
   margin: 0 auto;
   margin-top: 20px;
   padding-bottom: 10px;
-  border-radius: 10px;
   @media (max-width: 769px) {
     padding: 2rem 0;
   }
@@ -16,9 +14,11 @@ ul.nav {
   margin-bottom: 20px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  border-radius: 10px;
-  background-color: #eff1f8;
+  background-color: orange;
+  justify-content: flex-start;
+  overflow-x: hidden;
+  white-space: nowrap;
+  /* background-color: #eff1f8; */
   box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
   @media (max-width: 768px) {
     width: 90%;
@@ -26,16 +26,18 @@ ul.nav {
 }
 
 ul.nav li {
-  width: 50%;
   padding: 16px;
+  display:flex;
+  align-items: center;
+  justify-content:center;
   list-style: none;
   text-align: center;
   cursor: pointer;
-  transition: all 0.7s;
+  /* transition: all 0.7s; */
   color: black;
   opacity: 0.6;
 }
-
+/* 
 ul.nav li:first-child {
   border-bottom-left-radius: 10px;
   border-top-left-radius: 10px;
@@ -44,23 +46,18 @@ ul.nav li:first-child {
 ul.nav li:last-child {
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
-}
+} */
 
 ul.nav li:hover {
-  background: rgb(241, 237, 237);
+  background: red;
   opacity: 1;
 }
 
 ul.nav li.active {
-  background: rgb(214, 212, 212);
+  background: red;
   opacity: 1;
 }
 
 .tabContent {
   padding: 20px;
-}
-@media (max-width: 500px) {
-  ul.nav li {
-    font-size: 12px;
-  }
 }
