--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,13 @@ code {
 
 .wrapper {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  background-color: orange;
+}
+
+a{
+    text-decoration: none;
+    color:black;
 }
