--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -6,17 +6,17 @@
 
 .cardContainer {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   border-radius: 10px;
   background-color: #ffffff;
   padding: 15px;
-  height:130px;
+  height: 130px;
   align-items: center;
   border: black solid 1px;
   margin: 10px;
   box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
 }
-.info_container{
+.info_container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -44,7 +44,7 @@
 }
 .headerPMInfoContainer {
   display: flex;
-  width:100%;
+  width: 100%;
   align-items: flex-start;
   justify-content: space-between;
 }
@@ -60,11 +60,11 @@
   margin-right: 5px;
 }
 .PMName {
-  font-size: 16px;
+  font-size: 14px;
   opacity: 0.6;
 }
 .PMNameAdditional {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 .cardHeader {
@@ -101,6 +101,20 @@
   width: 20px;
   height: 20px;
 }
+.cardMembersContainer {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+  background-color: #ffffff;
+  padding: 10px;
+  align-items: center;
+  box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
+  width: 33%;
+  margin-bottom: 10px;
+}
+.close {
+  cursor: pointer;
+}
 @media only screen and (max-width: 1080px) {
   .btnEmployeeInfoContainer {
     display: flex;
@@ -108,8 +122,6 @@
     align-items: flex-end;
     justify-content: space-between;
     width: 100%;
-  }
-  .avatarPMContainer {
   }
 }
 @media only screen and (max-width: 780px) {
