--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -109,7 +109,7 @@
   padding: 10px;
   align-items: center;
   box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
-  width: 33%;
+  max-width: 340px;
   margin-bottom: 10px;
 }
 .close {
