--- a/src/components/elements/createContainer/CreateProject.module.css
+++ b/src/components/elements/createContainer/CreateProject.module.css
@@ -69,6 +69,7 @@
   width: 80vw;
   padding: 20px;
   border-radius: 10px;
+  margin-top: 30px;
 }
 @media only screen and (max-width: 635px) {
   .textarea {
