--- a/src/components/elements/input/Input.module.css
+++ b/src/components/elements/input/Input.module.css
@@ -26,18 +26,19 @@
 
 @media only screen and (max-width: 820px) {
   .input {
-      width: 160px;
+    width: 160px;
   }
 }
 @media only screen and (max-width: 630px) {
   .input {
-      height: 26px;
+    height: 26px;
   }
   .react_icon {
-      position: absolute;
-      top: 7px;
+    position: absolute;
+    top: 7px;
   }
   .input_container {
-      margin: -10px 0 10px 197px;
+    display: flex;
+    justify-content: flex-end;
   }
 }
