--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -129,6 +129,10 @@
     width: 50px;
     height: 50px;
   }
+  .avatar {
+    width: 50px;
+    height: 50px;
+  }
   .cardHeader {
     font-size: 14px;
   }
