--- a/src/components/elements/navigation/subHeader/SubHeader.module.css
+++ b/src/components/elements/navigation/subHeader/SubHeader.module.css
@@ -1,10 +1,9 @@
 .container {
-  height: 100px;
   background-color: rgb(211, 211, 211, 0.3);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-right: 130px;
+  padding: 20px 130px 20px 0px;
 }
 .logo_container {
   display: flex;
@@ -22,7 +21,10 @@
   padding-left: 90px;
   padding-right: 20px;
 }
-
+.inputBtnContainer {
+  display: flex;
+  align-items: center;
+}
 @media only screen and (max-width: 820px) {
   .container {
     padding-right: 40px;
@@ -30,10 +32,13 @@
 }
 @media only screen and (max-width: 630px) {
   .container {
-    height: 130px;
-    display: grid;
+    display: flex;
+    flex-direction: column;
   }
   .logo {
     padding-left: 25px;
+  }
+  .logo_container {
+    margin-bottom: 20px;
   }
 }
