--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -12,9 +12,9 @@
   padding: 15px;
   height: 130px;
   align-items: center;
-  border: black solid 1px;
   margin: 10px;
   box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
+  background-color: #f2efef;
 }
 .info_container {
   width: 100%;
