--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -80,12 +80,13 @@
   opacity: 0.6;
 }
 .cardContainerSecond {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
   background-color: #ffffff;
   padding: 15px;
-  width: 33vw;
+  width: 100%;
   justify-content: space-between;
   margin: 5px;
   box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
