--- a/src/components/elements/pagination/Pagination.module.css
+++ b/src/components/elements/pagination/Pagination.module.css
@@ -25,3 +25,9 @@
     background-color: mediumseagreen;
     pointer-events: none;
 }
+
+.dots{
+    display: flex;
+    align-items:flex-end;
+    padding-bottom: 10px;
+}
