--- a/src/components/elements/tabs/Tabs.module.css
+++ b/src/components/elements/tabs/Tabs.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: calc(100vh - 270px);
   max-height: calc(100vh - 270px);
-  background: #f6f8ff;
+  background: whitesmoke;
   margin: 0 auto;
   margin-top: 20px;
   padding-bottom: 10px;
@@ -12,15 +12,13 @@
 }
 
 ul.nav {
-  margin-bottom: 20px;
   display: flex;
   align-items: center;
-  background-color: orange;
+  background-color: rgb(191, 204, 203);
   justify-content: space-between;
   overflow: hidden;
   white-space: nowrap;
   height: 50px;
-  /* background-color: #eff1f8; */
   box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
   @media (max-width: 768px) {
     width: 90%;
@@ -39,24 +37,52 @@ ul.nav li {
   list-style: none;
   text-align: center;
   cursor: pointer;
-  /* transition: all 0.7s; */
   color: black;
   opacity: 0.6;
 }
 
 ul.nav li:hover {
-  background: red;
+  background: darkgray;
   opacity: 1;
 }
 
 ul.nav li.active {
-  background: red;
+  background: darkgray;
   opacity: 1;
 }
 
 .tabContent {
-  padding: 20px;
+  padding: 10px 20px 20px 20px;
   display: grid;
   grid-template-columns: repeat(3,1fr);
   gap:10px;
+}
+
+.outlet{
+  background-color: whitesmoke;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 0 1 auto;
+}
+
+.option_row{
+  display: flex;
+  align-items: flex-end;
+  padding: 20px 20px 0px 20px;
+  gap:25px;
+}
+
+.option_row > div input{
+  height:45px;
+}
+
+.pagination{
+  display: flex;
+  justify-content:center;
+  align-items:flex-end;
+}
+
+.sort_col{
+  width:250px;
 }
