--- a/src/components/elements/cards/Card.module.css
+++ b/src/components/elements/cards/Card.module.css
@@ -110,7 +110,7 @@
   padding: 10px;
   align-items: center;
   box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
-  max-width: 340px;
+  max-width: 80%;
   margin-bottom: 10px;
 }
 .close {
@@ -137,9 +137,9 @@
   .cardHeader {
     font-size: 14px;
   }
-  .PMAvatar {
+  /* .PMAvatar {
     display: none;
-  }
+  } */
   .PMName {
     font-size: 12px;
   }
@@ -162,8 +162,11 @@
     width: 28px;
     height: 28px;
   }
-  .PMAvatar {
+  /* .PMAvatar {
     display: none;
+  } */
+  .cardMembersContainer {
+    max-width: 100%;
   }
 }
 @media only screen and (max-width: 580px) {
