preview of uploaded image

--- a/src/components/elements/createContainer/CreateProject.module.css
+++ b/src/components/elements/createContainer/CreateProject.module.css
@@ -72,6 +72,19 @@
   border-radius: 10px;
   margin-top: 30px;
 }
+.uploadPreview {
+  width: 70px;
+  height: 70px;
+  margin-left: 10px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+}
+.imgPreview {
+  width: 68px;
+  border-radius: 10px;
+}
 @media only screen and (max-width: 635px) {
   .textarea {
     width: 100%;
