create project style fixed

--- a/src/components/elements/createContainer/CreateProject.module.css
+++ b/src/components/elements/createContainer/CreateProject.module.css
@@ -87,6 +87,11 @@
   height: 68px;
   object-fit: cover;
 }
+@media only screen and (min-width: 1300px) {
+  .contentContainer {
+    width: 50vw;
+  }
+}
 @media only screen and (max-width: 635px) {
   .textarea {
     width: 100%;
