--- a/src/components/elements/pagination/Pagination.module.css
+++ b/src/components/elements/pagination/Pagination.module.css
@@ -1,33 +1,34 @@
-.container{
-    display: flex;
-    list-style-type: none;
-    margin: 10px 0px;
+.container {
+  display: flex;
+  list-style-type: none;
+  margin: 10px 0px;
 }
 
-.item{
-    background-color:green;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    border-radius:100%;
-    margin:0 5px;
-    cursor: pointer;
+.item {
+  background-color: green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  margin: 0 5px;
+  cursor: pointer;
 }
 
-.disabled{
-    pointer-events: none;
-    background-color:purple;
+.disabled {
+  pointer-events: none;
+  background-color: purple;
 }
 
-.selected{
-    background-color: mediumseagreen;
-    pointer-events: none;
+.selected {
+  background-color: mediumseagreen;
+  pointer-events: none;
 }
 
-.dots{
-    display: flex;
-    align-items:flex-end;
-    padding-bottom: 10px;
+.dots {
+  display: flex;
+  align-items: flex-end;
+  padding-bottom: 10px;
 }
+/**/
