--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -1,6 +1,8 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  height: calc(100vh - 110px);
+  justify-content: space-between;
 }
 
 .container {
@@ -8,32 +10,37 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  height: calc(100vh - 220px);
+  padding: 20px 0px;
 }
 
 .card_container {
   display: grid;
-  margin-top: 10px;
+  margin-bottom: 40px;
   grid-template-columns: repeat(3, 1fr);
   width: 100%;
   max-width: 1200px;
 }
 
-.no_projects_container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 100px;
+.no_projects_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
 }
 
-.no_projects_message{
-    font-size:25px;
-    font-weight:800;
+.no_projects_message {
+  font-size: 25px;
+  font-weight: 800;
 }
 
-@media screen and (max-width:1100px) {
-    .card_container{
-        grid-template-columns: repeat(2, 1fr);
-    }
+@media screen and (max-width: 1100px) {
+  .card_container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .wrapper {
+    justify-content: flex-start;
+  }
 }
 @media screen and (max-width: 500px) {
   .card_container {
