--- a/src/components/elements/createContainer/CreateProject.module.css
+++ b/src/components/elements/createContainer/CreateProject.module.css
@@ -58,19 +58,20 @@
   justify-content: flex-end;
 }
 .contentContainer {
-  background-color: #f6f8ff;
-  box-shadow: 0px 16px 30px -10px rgb(70 96 187 / 20%);
+  background-color: white;
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: auto;
   grid-template-areas:
-    "projectInfoHeader  projectInfo "
+    "projectInfoHeader projectInfo "
     "membersHeader membersInfo";
-  grid-gap: 20px;
+  row-gap: 30px;
   width: 80vw;
   padding: 20px;
   border-radius: 10px;
   margin-top: 30px;
+  box-shadow: 0px 30px 75px -30px hsl(229deg 6% 66%);
+  border-top: 3px solid rgb(49, 151, 149);
 }
 .uploadPreview {
   width: 70px;
