--- a/src/components/elements/editAccountPage/EditAccountPage.module.css
+++ b/src/components/elements/editAccountPage/EditAccountPage.module.css
@@ -1,19 +1,43 @@
-.container {
-    background: rgb(211, 211, 211, 0.3);
+.wrapper {
     display: flex;
     justify-content: center;
-    padding: 40px 30px;
 }
 
-.logo {
-    margin-right: 15px;
-    margin-bottom: 15px;
+.container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-start;
+    padding: 15px 30px;
+    width: 100%;
+    max-width: 1100px;
+    background-color:rgb(219, 219, 219);
+    border-radius: 5px;
+}
+
+.password_information{
+    /* width: 50%; */
 }
 
 .acc_informations {
-    background: #fff;
-    padding: 15px 25px;
-    border-radius: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.acc_informations input,
+.acc_informations button {
+    width: 100%;
+    height: 40px;
+}
+
+.acc_informations input {
+    margin-top: 5px;
+}
+
+.row {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .flex {
@@ -35,11 +59,45 @@
     margin-top: 15px;
 }
 
-.logo {
-    height: 150px;
-    width: 150px;
+.logo_container:hover {
+    box-shadow: inset 0 0 0 2000px rgba(32, 32, 32, 0.3);
 }
 
+.logo_container {
+    position: relative;
+    margin: 15px 0px;
+    height: 200px;
+    width: 200px;
+    border-radius: 100%;
+    cursor: pointer;
+    background-size: cover;
+    z-index: 1;
+}
+.camera_thumb {
+    position: absolute;
+    color: white;
+    font-size: 60px;
+    inset: 0;
+    z-index: 2;
+    margin: auto;
+}
+
+.input_label {
+    font-weight: 600;
+    margin: 5px 0px;
+}
+
+.title_label{
+    font-weight: 800;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.password_label{
+    font-weight: 600;
+    font-size: 25px;
+    margin: 10px 0px;
+}
 
 .grid {
     display: grid;
@@ -50,4 +108,42 @@
     margin-top: 20px;
     display: flex;
     justify-content: center;
+}
+
+.section_one {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section_two {
+    width: 100%;
+    margin-left: 40px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.user_name{
+    font-weight:800;
+    font-size:25px;
+}
+
+.button_section{
+    margin-top: 30px;
+    width: 100%;
+}
+
+.button_section button {
+    width: 130px;
+    height:40px;
+}
+
+.row_reverse {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-end;
+    width: 100%;
 }
