--- a/src/components/elements/file/File.module.css
+++ b/src/components/elements/file/File.module.css
@@ -79,3 +79,13 @@
 .avatar:hover{
     text-decoration: underline;
 }
+
+.project{
+    cursor: pointer;
+    border-radius: 5px;
+    padding: 4px 10px;
+    margin-left: 10px;
+    border: 1px solid lightgrey;
+    background-color:white;
+    font-size: 14px;
+}
