--- a/src/components/elements/createContainer/CreateProject.module.css
+++ b/src/components/elements/createContainer/CreateProject.module.css
@@ -12,6 +12,7 @@
 }
 .membersHeader {
     grid-area: membersHeader;
+    margin-top: 20px;
 }
 .membersInfo {
     grid-area: membersInfo;
@@ -37,6 +38,7 @@
 .row{
   display: flex;
   align-items: flex-end;
+  margin-top: 10px;
 }
 .file {
     cursor: pointer;
@@ -49,6 +51,7 @@
 .textAreaContainer {
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
 }
 .textarea {
     border: 1px solid lightgray;
@@ -61,7 +64,7 @@
 }
 .buttonWrapper {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: flex-end;
     height: 100px;
 }
@@ -83,6 +86,11 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    background-color:white;
+}
+
+.uploadPreview:hover {
+    filter: brightness(0.85);
 }
 .imgPreview {
     width: 100px;
@@ -91,10 +99,6 @@
     object-fit: cover;
     cursor: pointer;
     border: 1px solid lightgray;
-}
-
-.imgPreview:hover {
-    filter: brightness(0.85);
 }
 
 .employee_container{
@@ -107,6 +111,16 @@
 }
 .employee_container::-webkit-scrollbar {
   display: none;
+}
+.employee_container span{
+  font-size: 22px;
+  font-weight:600;
+  color:rgb(180, 180, 180);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media only screen and (min-width: 1300px) {
     .contentContainer {
