--- a/src/components/elements/loadingSpinner/LoadingSpinner.module.css
+++ b/src/components/elements/loadingSpinner/LoadingSpinner.module.css
@@ -22,7 +22,7 @@
   z-index: 222;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(211, 211, 211, 0.6);
+  /* background-color: rgba(211, 211, 211, 0.6); */
   justify-content: center;
   align-items: center;
 
