--- a/src/components/elements/navigation/header/Header.module.css
+++ b/src/components/elements/navigation/header/Header.module.css
@@ -38,7 +38,18 @@
   transition: 0.5s;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(180deg, rgb(0 0 0 / 96%) 0%, rgba(0, 0, 0, 0.0001) 100%);
+  background-color: rgb(49, 151, 149);
+  animation-name: openNav;
+  animation-duration: 1.5s;
+  transition: height 0.5s ease-in;
+}
+@keyframes openNav {
+  0% {
+    height: 0%;
+  }
+  100% {
+    height: 100%;
+  }
 }
 .overlayContent {
   margin: 32px 25px 0px 25px;
@@ -75,6 +86,22 @@
 }
 .closeIcon {
   cursor: pointer;
+}
+.userAvatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid rgb(49, 151, 149);
+  margin-right: 5px;
+  object-fit: contain;
+  background-color: white;
+}
+.userInfoContainer {
+  margin: 0px 25px;
+}
+.userName,
+.userRole {
+  color: white;
 }
 @media only screen and (max-width: 820px) {
   .hamburgerIcon {
